# xdocs

./: .gitignore  README.md  layout.md  pyproject.toml
.github/workflows/: docs.yml
docs/: api.md  quickstart.md
docs/.xdocs_snapshots/: quickstart.md__0__4dda93d0.stdout
tests/: test_xdocs.py
xdocs/: assertions.py  cli.py  extract.py  models.py  normalize.py  runner.py  scaffold.py  snapshots.py
