[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xdocs"
version = "0.1.0"
description = "Executable docs (docs-as-tests) runner for Markdown fenced code blocks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
xdocs = "xdocs.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]


